Fix CORS by reading frontend URL from application.properties